#13 - jar 배포 환경에서도 파일 읽을 수 있도록 코드 수정